fix(core): `tuiLink` mustn't break inline model for anchors

--- a/projects/core/components/link/link.style.less
+++ b/projects/core/components/link/link.style.less
@@ -112,8 +112,6 @@
 }
 
 .t-content {
-    display: inline-block;
-
     :host._focus-visible & {
         background: var(--tui-selection);
     }
